@@ -574,6 +574,17 @@ static bool ConvertObjectToolMacros(UINT32 id, const TCHAR *text, const TCHAR *c
 }
 
 /**
+ * Upgrade from V376 to V377
+ */
+static BOOL H_UpgradeFromV376(int currVersion, int newVersion)
+{
+   CHK_EXEC(CreateConfigParam(_T("DefaultSubnetMaskIPv4"), _T("24"), _T("Default mask for synthetic IPv4 subnets"), 'I', true, false, false, false));
+   CHK_EXEC(CreateConfigParam(_T("DefaultSubnetMaskIPv6"), _T("64"), _T("Default mask for synthetic IPv6 subnets"), 'I', true, false, false, false));
+   CHK_EXEC(SQLQuery(_T("UPDATE metadata SET var_value='377' WHERE var_name='SchemaVersion'")));
+   return TRUE;
+}
+
+/**
  * Upgrade from V375 to V376
  */
 static BOOL H_UpgradeFromV375(int currVersion, int newVersion)
@@ -9030,6 +9041,7 @@ static struct
    { 373, 374, H_UpgradeFromV373 },
    { 374, 375, H_UpgradeFromV374 },
    { 375, 376, H_UpgradeFromV375 },
+   { 376, 377, H_UpgradeFromV376 },
    { 0, 0, NULL }
 };
 
